Added environment setup files

--- a/Git-Test/index.html
+++ b/Git-Test/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>I am first Line</p>
+    <h1>I am first Line</h1>
     <p>I am second Line</p>
     <p>I am third Line</p>
 </body>
